fixed alignment of avatars

--- a/web-frontend/src/app/pages/profile/profile.component.scss
+++ b/web-frontend/src/app/pages/profile/profile.component.scss
@@ -2,7 +2,7 @@
 
 #avatar-group {
   display: flex;
-  padding: 10px 0;
+  flex-wrap: wrap;
 }
 
 .avatar-preview {
@@ -14,7 +14,7 @@
   background-repeat: no-repeat;
   background-position: center;
   border: 2px solid black;
-  margin: 0 10px 0 -7px;
+  margin: 5px 10px 5px -7px;
   cursor: pointer;
 }
 
